# routes/web.php
@@ -17,14 +17,6 @@ use Illuminate\Support\Facades\Route;
 |
 */
 
-Route::get('/', function () {
-    return view('welcome');
-});
-
-Route::get('/vue', function() {
+Route::get('/{any}', function () {
     return view('vue');
-});
-Route::resource('hotel', HotelController::class);
-Route::resource('service', ServiceController::class);
-Route::resource('room', RoomController::class);
-Route::resource('guest', GuestController::class);
+})->where('any', '.*');
